# spotipylist

./: .gitignore  LICENSE  Pipfile  README.md  playlist_generator.py  pyproject.toml  requirements.txt  setup.cfg  spotipylist.py
src/: __main__.py  spotipylist.py
src/utils/: music_library.py  playlist.py  playlist_generator.py
