[metadata]
name = spotipylist
version = 0.1.3
description = A playlist generator for creating local playlists using Spotify curated playlists
long_description = file: README.md
long_description_content_type = text/markdown
author = Zachary Eller
author_email = zacharyeller@pm.me
url = https://github.com/zacharyeller13/spotipylist
project_urls=
    Bug Tracker = https://github.com/zacharyeller13/spotipylist/issues
license = MIT License
license_files = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
install_requires = 
    spotipy>=2.19.0
    rapidfuzz>=1.7.1

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts = 
    spotipylist = src.__main__:spotipylist
